refactor: Carousel text changes for mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -131,8 +131,8 @@
                     <span class="d-none d-lg-inline font-white">Fast dispatch - usually same day!</span>
                     <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
                     <span class="font-white">Free delivery on orders over ${{ free_delivery_threshold }}!</span>
-                    <span class="d-none d-md-inline ml-3 mr-3 font-white">-</span>
-                    <span class="d-none d-md-inline font-white"> Professional packaging for EVERY order</span>
+                    <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
+                    <span class="d-none d-lg-inline font-white"> Professional packaging for EVERY order</span>
                 </div>
             </div>
         </div>
