--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,21 +20,21 @@
         <img src="{{ MEDIA_URL }}home/rugby_boots.jpg" class="carousel-image d-block w-100" alt="rugby boots">
         <div class="carousel-caption ">
             <h1 class="text-white ">Rugby Boots</h1>
-            <p class="text-white">Find our collection of <a href="{% url 'products' %}?category=adidas_kakari,adidas_malice">boots</a></p>
+            <p class="d-none d-md-inline text-white">Find our collection of <a href="{% url 'products' %}?category=adidas_kakari,adidas_malice">boots</a></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="{{ MEDIA_URL }}home/rugby_scrum.jpg" class="carousel-image d-block w-100" alt="rugby scrum">
         <div class="carousel-caption  ">
             <h1 class="text-white">Jerseys</h1>
-            <p class="text-white">Find our collection of <a href="{% url 'products' %}?category=leinster,munster,ulster">jerseys</a></p>
+            <p class="d-none d-md-inline text-white">Find our collection of <a href="{% url 'products' %}?category=leinster,munster,ulster">jerseys</a></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="{{ MEDIA_URL }}home/rugby_ball.jpg" class="carousel-image d-block w-100" alt="rugby ball">
         <div class="carousel-caption ">
             <h1 class="text-white">News</h1>
-            <p class="text-white">Keep up to date with our <a href="{% url 'news_items' %}">news</a></p>
+            <p class="d-none d-md-inline text-white">Keep up to date with our <a href="{% url 'news_items' %}">news</a></p>
         </div>
       </div>
     </div>
