--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -11,7 +11,7 @@
     {% endif %}<br>
     {{ widget.input_text }}
 {% endif %}
-<span class="btn btn-black rounded-0 btn-file">
+<span class="btn black-btn rounded-0">
     Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
 </span>
 <strong><p class="text-danger" id="filename"></p></strong>
