--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -10,36 +10,44 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Add a Product</h5>
-                <hr>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+<div class="overlay"></div>
+<div class="hero-image">
+    <main class="section-holder">
+        <div class="form-holder-lg">
+            <main class="container">
+                <div class="overlay"></div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <hr>
+                                <h1 class="logo-font mb-4">Product Management</h1>
+                                <h2 class="text-muted">Add a Product</h2>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                                    {% csrf_token %}
+                                    {% for field in form %}
+                                        {% if field.name != 'image' %}
+                                            {{ field | as_crispy_field }}
+                                        {% else %}
+                                            {{ field }}
+                                        {% endif %}
+                                    {% endfor %}
+                                    <div class="text-right">
+                                        <a class="btn red-btn rounded-0" href="{% url 'products' %}">Cancel</a>
+                                        <button class="btn green-btn rounded-0" type="submit">Add Product</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
-                </form>
-            </div>            
+            </main>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
