--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
                         </div>
                     </li>
                      <li class="list-inline-item">
-                        <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                        <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_product_favourites' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-heart"></i></div>
                                 <p class="my-0">
@@ -130,7 +130,7 @@
                 <div class="mt-1 mb-1">
                     <span class="d-none d-lg-inline font-white">Fast dispatch - usually same day!</span>
                     <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
-                    <span class="font-white">Free delivery on orders over ${{ free_delivery_threshold }}!</span>
+                    <span class="font-white">Free delivery on orders over €{{ free_delivery_threshold }}!</span>
                     <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
                     <span class="d-none d-lg-inline font-white"> Professional packaging for EVERY order</span>
                 </div>
