refactor: Wave accessibility fixes/css class/color changes

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -37,8 +37,8 @@
                                         {% endif %}
                                     {% endfor %}
                                     <div class="text-right">
-                                        <a class="btn red-btn rounded-0" href="{% url 'products' %}">Cancel</a>
-                                        <button class="btn green-btn rounded-0" type="submit">Add Product</button>
+                                        <a class="btn black-btn" href="{% url 'products' %}">Cancel</a>
+                                        <button class="btn green-btn" type="submit">Add Product</button>
                                     </div>
                                 </form>
                             </div>
