--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -5,11 +5,11 @@
 }
 
 #profile-update-form .form-control {
-    color: #000;
+    color: #000 !important;
 }
 
 #profile-update-form input::placeholder {
-    color: #aab7c4;
+    color: #212529;
 }
 
 #id_default_country,
@@ -18,5 +18,5 @@
 }
 
 #id_default_country option:first-child {
-    color: #aab7c4;
+    color: #212529;
 }
