--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -15,14 +15,14 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Edit a Product</h5>
+                <h1 class="font-black-bg mb-4">Product Management</h1>
+                <h2 class="font-black-bg">Edit a Product</h2>
                 <hr>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 edit-product">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Update Product</button>
+                        <a class="btn black-btn rounded-0" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn green-btn rounded-0" type="submit">Update Product</button>
                     </div>
                 </form>
             </div>            
