--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -11,7 +11,7 @@
                 <label for="search-mobile" hidden>Search</label>
                 <input class="form-control border border-black rounded-0" type="text" id="search-mobile" name="q" placeholder="Search our site">
                 <div class="input-group-append">
-                    <button class="form-control form-control btn btn-black border border-black rounded-0 green-btn" id="search" type="submit">Search
+                    <button class="form-control form-control btn btn-black border border-black rounded-0 green-btn" id="search-btn" type="submit">Search
                     </button>
                 </div>
             </div>
