--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,6 +1,6 @@
 <a href="{% url 'products' %}" class="btn black-btn">Keep Shopping</a>
-</a>
-<a href="{% url 'checkout' %}" class="btn green-btn">Secure Checkout     <span class="icon">
+<a href="{% url 'checkout' %}" class="btn green-btn">Secure Checkout
+    <span class="icon">
         <i class="fas fa-lock"></i>
-    </span></a>
-</a> 
+    </span>
+</a>
