--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -12,9 +12,9 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="hero-image">
-    <main class="section-holder">
+    <div class="section-holder">
         <div class="form-holder-lg">
-            <main class="container">
+            <div class="container">
                 <div class="overlay"></div>
                     <div class="container">
                         <div class="row">
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                     </div>
-            </main>
+            </div>
         </div>
     </div>
 </div>
@@ -52,10 +52,5 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-        $('#new-image').change(function() {
-            var file = $('#new-image')[0].files[0];
-            $('#filename').text(`Image will be set to: ${file.name}`);
-        });
-    </script>
+    <script src="{% static 'products/js/products.js' %}"></script>
 {% endblock %}
